--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Provies Bug Bounty Dorking</title>
+  <title>Provies Bug Bounty Dorking Site</title>
   <style>
     body {
       background: #111;
@@ -74,8 +74,8 @@
     }
   </script>
 <body>
-  <h1>Provies Bug Bounty Dorking</h1>
-  <div id="loading">PBBD</div>
+  <h1>Provies Bug Bounty Dorking Site</h1>
+  <div id="loading">PBBDS</div>
   <ul>
   <li>Directory listing vulnerabilities</li>
 </ul>
