--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
   <div id="loading">PBBDS</div>
+  <input type="text" id="domain" name="domain"><br><br>
   <ul>
   <li>Directory listing vulnerabilities</li>
 </ul>
