--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       $("span").removeClass("glow");
     }
   </script>
+  <script type="text/javascript" src="/js/main.js"></script>
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
   <div id="loading">PBBDS</div>
   <input type="text" id="domain" name="domain"><br><br>
-  <ul>
-  <li>Directory listing vulnerabilities</li>
-</ul>
+  <div id="reconlist">
+  </div>
 </body>
 </html>
 
