--- a/index.html
+++ b/index.html
@@ -2,77 +2,14 @@
 <html>
   <title>Provies Bug Bounty Dorking Site</title>
   <style>
-    body {
-      background: #111;
-      color: #411;
-      font-family: Consolas, Courier, monospace;
-      font-size: 60px;
-      text-shadow: 0 0 15px #411;
-      height: 100%;
-    }
-
-    div {
-      position: relative;
-      top: 50%;
-      margin: -30px auto;
-      text-align: center;
-    }
-
-    .glow {
-      color: #f00;
-      text-shadow: 0px 0px 10px #f00;
-    }
-
-    span {
-      display: inline-block;
-      padding: 0 10px;
-    }
+   body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 14px;
+    line-height: 1.5;
+    color: #24292e;
+    background-color: #fff;
+}
   </style>
-  <script>
-    alphabet = new Array("A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "1", "2", "3", "4", "5", "6", "7", "8", "9", "0");
-    letter_count = 0;
-    el = $("#loading");
-    word = el.html().trim();
-    finished = false;
-
-    el.html("");
-    for (var i = 0; i < word.length; i++) {
-      el.append("<span>"+word.charAt(i)+"</span>");
-    }
-
-    setTimeout(write, 75);
-    incrementer = setTimeout(inc, 1000);
-
-    function write() {
-      for (var i = letter_count; i < word.length; i++) {
-        var c = Math.floor(Math.random() * 36);
-        $("span")[i].innerHTML = alphabet[c];
-      }
-      if (!finished) {
-        setTimeout(write, 75);
-      }
-    }
-
-    function inc() {
-      $("span")[letter_count].innerHTML = word[letter_count];
-      $("span:eq("+letter_count+")").addClass("glow");
-      letter_count++;
-      if (letter_count >= word.length) {
-        finished = true;
-        setTimeout(reset, 1500);
-      } else {
-        setTimeout(inc, 1000);
-      }
-    }
-
-    function reset() {
-      letter_count = 0;
-      finished = false;
-      setTimeout(inc, 1000);
-      setTimeout(write, 75);
-      $("span").removeClass("glow");
-    }
-  </script>
   <script type="text/javascript" src="/js/main.js"></script>
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
