--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     background-color: #fff;
 }
   </style>
-  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
   <div id="loading">PBBDS</div>
