--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     background-color: #fff;
 }
   </style>
+  <script type="text/javascript" src="js/reconlist.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
