--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <input type="text" id="domain" name="domain"><br><br>
   <div id="reconlist">
   </div>
+  <script type="text/javascript"> makeList(); </script>
 </body>
 </html>
 
