add more domains

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <title>Provies Bug Bounty Dorking Site</title>
   <style>
+  @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+*{
+    margin: 0px;
+    padding: 0px;
+}
    body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
+    font-family: 'Exo', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 2em;
     line-height: 1.5;
     color: #24292e;
     background-color: #fff;
@@ -13,7 +18,8 @@
   <script type="text/javascript" src="js/main.js"></script>
 <body>
   <h1>Provies Bug Bounty Dorking Site</h1>
-  <div id="loading">PBBDS</div>
+  <div id="loading"></div>
+  Domain:
   <input type="text" id="domain" name="domain"><br><br>
   <div id="reconlist">
   </div>
