move style in custom.css

--- a/index.html
+++ b/index.html
@@ -1,281 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Provies Bug Bounty Dorking Site</title>
-  <style>
-  @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
-
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-
-    font-family: "Exo","Roboto", sans-serif;
-	font-size: 20px;
-
-    color: #fff;
-    background-color: #232629;
-}
-
-p {
-    line-height: 1.7;
-}
-label {
-	font-size: 20px;
-	}
-h1 {
-    margin-top: 30px;
-
-    font-size: 30px;
-    line-height: 1;
-
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-/* PUSH MENU */
-#menu-switch{
-  display:none;
-}
-#menu {
-    position: fixed;
-    top: 0;
-    left: -300px;
-
-    width: 300px;
-    height: 100%;
-    padding: 50px 30px;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-
-    -webkit-transition: all .3s ease-in;
-       -moz-transition: all .3s ease-in;
-         -o-transition: all .3s ease-in;
-            transition: all .3s ease-in;
-    text-align: center;
-
-    background-color: #fff;
-}
-#menu .brand {
-    height: 51px;
-
-    font-size: 70px;
-    font-weight: 900;
-    line-height: .6;
-
-    color: #ddd;
-}
-#menu ul {
-    padding: 0;
-    margin-top: 30px;
-}
-
-#menu ul li a {
-    display: block;
-
-    font-weight: 900;
-    line-height: 50px;
-
-    -webkit-transition: all .3s ease;
-       -moz-transition: all .3s ease;
-         -o-transition: all .3s ease;
-            transition: all .3s ease;
-    text-decoration: none;
-    text-transform: uppercase;
-
-    color: #232629;
-    border-top: 1px solid #eee;
-}
-#menu ul li:last-child a {
-    border-bottom: 1px solid #eee;
-}
-#menu ul li a:hover {
-    letter-spacing: 1px;
-}
-#menu-switch:checked ~ #menu {
-    left: 0;
-}
-/* MAIN PAGE */
-.page-wrap {
-   
-    padding: 50px;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-
-    -webkit-transition: all .3s ease-in;
-       -moz-transition: all .3s ease-in;
-         -o-transition: all .3s ease-in;
-            transition: all .3s ease-in;
-}
-#menu-switch:checked ~ .page-wrap {
-    margin-left: 300px;
-}
-
-/* MENU TOGGLE ICON */
-#menu-toggle:focus {
-    outline: none;
-}
-#menu-toggle {
-    display:inline-block;
-    position: relative;
-
-    width: 51px;
-    height: 51px;
-
-    cursor: pointer;
-
-    border: none;
-    -webkit-border-radius: 50px;
-       -moz-border-radius: 50px;
-            border-radius: 50px;
-    background: #fff;
-      -webkit-transition: all .5s ease;
-       -moz-transition: all .5s ease;
-         -o-transition: all .5s ease;
-            transition: all .5s ease;
-}
-#menu-toggle:before,
-#menu-toggle:after {
-    position: absolute;
-
-    content: "";
-
-    background-color: #232629;
-}
-
-#menu-toggle:before {
-    top: 12px;
-    left: 25px;
-
-    width: 1px;
-    height: 27px;
-}
-#menu-toggle:after {
-    top: 25px;
-    left: 12px;
-
-    width: 27px;
-    height: 1px;
-}
-
-#menu-switch:checked ~ .page-wrap #menu-toggle {
-    -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
-}
-/* CONTENT CONTAINER */
-.container {
-    max-width: 600px;
-    min-width: 200px;
-    margin: 0 auto;
-}
-
-p{
-  text-decoration:line-through;
-}
-
-#reconlist a {
-    border-bottom: .05em solid #b4e7f8;
-    box-shadow: inset 0 -0.05em 0 #b4e7f8;
-    color: inherit;
-    transition: background-color .25s cubic-bezier(.33, .66, .66, 1);
-		text-decoration: none;
-}
-
-#reconlist a:hover, #reconlist a:focus, #reconlist a:active {
-    background-color: #b4e7f8;
-}
-
-*:focus {
-  outline: none;
-}
-.input-group {
-  display: block;
-  width: 441px;
-  max-width: 100%;
-  height: 82px;
-  border: 0;
-  background-color: #ffffff;
-  border-bottom-left-radius: 41px;
-  border-bottom-right-radius: 41px;
-  border-top-left-radius: 41px;
-  border-top-right-radius: 0;
-  box-shadow: 0 17px 40px 0 rgba(75, 128, 182, 0.07);
-  margin-bottom: 22px;
-  position: relative;
-  color: #a7b4c1;
-  transition: opacity 0.2s ease-in-out, filter 0.2s ease-in-out,
-    box-shadow 0.1s ease-in-out;
-}
-
-.input-group:hover {
-  box-shadow: 0 14px 44px 0 rgba(0, 0, 0, 0.077);
-}
-
-.input-group input {
-  position: absolute;
-  border: 0;
-  box-shadow: none;
-  background-color: rgba(255, 255, 255, 0);
-  top: 0;
-  height: 65px;
-  width: 100%;
-  padding: 0 53px;
-  box-sizing: border-box;
-  z-index: 3;
-  display: block;
-  color: #1a6fc4;
-  font-size: 20px;
-  font-family: "Oxygen", sans-serif;
-  transition: top 0.1s ease-in-out;
-}
-
-.input-group input::placeholder {
-  color: rgba(0, 0, 0, 0);
-}
-
-.input-group input:focus,
-.input-group input:not(:placeholder-shown) {
-  top: 17px;
-}
-
-.input-group label {
-  position: absolute;
-  border: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  padding: 0 53px;
-  box-sizing: border-box;
-  transition: all 0.1s ease-in-out;
-  cursor: text;
-}
-
-.input-group input:focus + label,
-.input-group input:not(:placeholder-shown) + label {
-  bottom: 20px;
-  font-size: 13px;
-  opacity: 0.7;
-}
-
-.req-mark {
-  position: absolute;
-  pointer-events: none;
-  top: 0;
-  right: 33px;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 22px;
-  color: #e0e0e0;
-  font-family: "Ubuntu", sans-serif;
-}
-  </style>
+  <link rel="stylesheet" href="custom.css">
   <script type="text/javascript" src="js/main.js"></script>
 <body>
 <input id="menu-switch" type="checkbox" />
@@ -293,8 +19,8 @@ p{
             <article>
                 <h1>Provies Bug Bounty Dorking Site</h1>
 				<div class="input-group">
-				  <input value="" class="form-control" type="text" name="domain" id="domain" required="required" placeholder="www.victim.com">
-				  <label for="text-domain">Your Domain:</label>
+				  <input value="" class="form-control" type="url" name="domain" id="domain" required="required" autocomplete="off" placeholder="www.victim.com">
+				  <label for="domain">Your Domain:</label>
 				  <div class="req-mark">!</div>
 				</div>
 				<div id="reconlist">
