add category to menu

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
 <body>
 <input id="menu-switch" type="checkbox" />
     <nav id="menu" role="navigation">
-        <div class="brand">&popf;</div>            
-        <ul>
-            <li><a href="#">Google</a></li>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Website Info</a></li>
-        </ul>
+        <div class="brand">&popf;</div>
+		<div id="menuCategoryList">
+		</div>
     </nav>
     <div class="page-wrap">
         <label for="menu-switch" id="menu-toggle"></label>
