add category menu and startsite value

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <input id="menu-switch" type="checkbox" />
     <nav id="menu" role="navigation">
-        <div class="brand">&popf;</div>
+        <div class="brand"><a href="#">&popf;</a></div>
 		<div id="menuCategoryList">
 		</div>
     </nav>
