--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="menu-switch" id="menu-toggle"></label>
         <div class="container" role="main">
             <article>
-                <h1>Provies Bug Bounty Dorking Site</h1>
+                <h1>Provies Bug Bounty Dorking Site - PBBDS</h1>
 	        <div class="input-group">
 		   <input value="" class="form-control" type="url" name="domain" id="domain" required="required" autocomplete="off" placeholder="www.victim.com">
 		   <label for="domain">Your Domain:</label>
