--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<script type="text/javascript"> makeList(); </script>
             </article>
         </div>
-<div>https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS</div>
+<div><a href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">GitHub Repo</a></div>
      </div>
   </body>
 </html>
