add class for github link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
         </div>
         <div class="container">
-            <a href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">GitHub Repo</a>
+            <a class="github-link" href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">GitHub Repo</a>
         </div>
      </div>
   </body>
