--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <body>
     <input id="menu-switch" type="checkbox" />
     <nav id="menu" role="navigation">
-        <div class="brand"><a href="?">&popf;</a></div>
+        <div class="brand"><a href="?">&popf;</a><img src="https://avatars.githubusercontent.com/u/92156402?s=400&u=7fe0dbb9085a37818ee8c2b061432a9a69cbff42&v=4" alt="Proviesec logo" title="Proviesec" align="right" height="60" /></div>
 		<div id="menuCategoryList">
 		</div>
     </nav>
     <div class="page-wrap">
         <label for="menu-switch" id="menu-toggle"></label>
-		<div class="container">
-            <a class="github-link" href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">PBBDS - GitHub Repo</a>&nbsp;
-			<a class="twitter-link" href="https://twitter.com/proviesec">Twitter - Proviesec</a>
+	<div class="container">
+        	<a class="github-link" href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">PBBDS - GitHub Repo</a>&nbsp;
+		<a class="twitter-link" href="https://twitter.com/proviesec">Twitter - Proviesec</a>
         </div>
         <div class="container" role="main">
             <article>
