--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		   <input value="" class="form-control" type="url" name="domain" id="domain" required="required" autocomplete="off" placeholder="www.victim.com">
 		   <label for="domain">Your Domain:</label>
 		   <div class="req-mark">!</div>
+		   <button type="button">Without subdomain</button>
 	        </div>
 	        <div id="reconlist">
 		</div>
