--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		   <input value="" class="form-control" type="url" name="domain" id="domain" required="required" autocomplete="off" placeholder="www.victim.com">
 		   <label for="domain">Your Domain:</label>
 		   <div class="req-mark">!</div>
-		   <button type="button">Without subdomain</button>
 	        </div>
+		   Without subdomain: <input type="checkbox" id="myCheck" onclick="withoutSubdomain()">
 	        <div id="reconlist">
 		</div>
 		<script type="text/javascript"> makeList(); </script>
