--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		   <label for="domain">Your Domain:</label>
 		   <div class="req-mark">!</div>
 	        </div>
-		   Without subdomain: <input type="checkbox" id="myCheck" onclick="withoutSubdomain()">
+		   With subdomain: <input type="checkbox" id="myCheck" checked="checked" onclick="withoutSubdomain()">
 	        <div id="reconlist">
 		</div>
 		<script type="text/javascript"> makeList(); </script>
