--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="page-wrap">
         <label for="menu-switch" id="menu-toggle"></label>
 	<div class="container">
-        	<a class="github-link" href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">PBBDS - GitHub Repo</a>&nbsp;
-		<a class="twitter-link" href="https://twitter.com/proviesec">Twitter - Proviesec</a>
+        	<a class="social-link" href="https://github.com/provie/Provies-Bug-Bounty-Dorking-Site-PBBDS">PBBDS - GitHub Repo</a>&nbsp;
+		<a class="social-link" href="https://twitter.com/proviesec">Twitter - Proviesec</a>
                 <a href="https://www.buymeacoffee.com/proviesec" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/default-orange.png" alt="Buy Me A Coffee" height="41" width="174"></a>
         </div>
         <div class="container" role="main">
