--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <meta charset="utf-8">
   <title>Provies Bug Bounty Dorking Site</title>
   <link rel="stylesheet" href="custom.css">
   <script type="text/javascript" src="js/main.js"></script>
