--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta charset="utf-8">
+	<meta name="description" content="Bug Bounty Dorking Site"/>
   <title>Provies Bug Bounty Dorking Site</title>
   <link rel="stylesheet" href="custom.css">
   <script type="text/javascript" src="js/main.js"></script>
