--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <meta charset="utf-8">
-	<meta name="description" content="Bug Bounty Dorking Site"/>
+  <meta name="description" content="Bug Bounty Dorking Site"/>
+  <meta name="keywords" content="Bug Bounty, Hackerone, XSS, Subdomain"/>
   <title>Provies Bug Bounty Dorking Site</title>
   <link rel="stylesheet" href="custom.css">
   <script type="text/javascript" src="js/main.js"></script>
