--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 		</div>
 		<script type="text/javascript"> makeList(); </script>
             </article>
+		<div class="search-group">
+		   <input value="" class="search-control" type="text" name="search" id="search" placeholder="Github dork">
+		   <label for="domain">Your Search:</label>
+	        </div>
         </div>
      </div>
   </body>
