--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Bug Bounty Dorking Site"/>
   <meta name="keywords" content="Bug Bounty, Hackerone, XSS, Subdomain"/>
   <meta name="robots" content="index"/>
-  <title>Provies Bug Bounty Dorking Site</title>
+  <title>Proviesec Bug Bounty Dorking Site</title>
   <link rel="stylesheet" href="custom.css">
   <script type="text/javascript" src="js/main.js"></script>
   <body>
