--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 		</div>
 		<script type="text/javascript"> makeList(); </script>
             </article>
-		<div class="search-group">
-		   <label for="domain">Your Search:</label>
-		   <input value="" class="search-control" type="text" name="search" id="search" placeholder="Github dork">
-	        </div>
+	    <div class="search-group">
+		<label for="search">Your Search:</label>
+	        <input value="" class="search-control" type="text" name="search" id="search" placeholder="Github dork">
+	    </div>
         </div>
      </div>
   </body>
