--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		   With subdomain: <input type="checkbox" id="myCheck" checked="checked" onclick="withoutSubdomain()">
 	        <div id="reconlist">
 		</div>
-		<script type="text/javascript"> makeList(); </script>
+		<script type="text/javascript"> startSite(); </script>
             </article>
 	    <div class="search-group">
 		<label for="search">Your Search:</label>
