--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </article>
 	    <div class="search-group control">
 		<label for="search">Your Search:</label>
-	        <input value="" class="search-control" type="text" name="search" id="search" placeholder="Github dork">
+	        <input value="" class="search-control" type="text" name="search" id="search" placeholder="Github dorks">
 	    </div>
         </div>
      </div>
